# Software-Completo-Cafeteria

./: .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  clientes.py  health.py  usuarios.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: auth.py  clientes.py  common.py  usuarios.py
backend/app/tasks/: seed.py
backend/app/tests/: test_health.py
frontend/: .eslintrc.cjs  README.md  index.html  package.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
frontend/src/layouts/: AppLayout.css  AppLayout.tsx
frontend/src/pages/: AdminDashboard.tsx  CajaDashboard.tsx  CocinaDashboard.tsx  Dashboard.css  MozoDashboard.tsx
frontend/src/routes/: routes.tsx
frontend/src/services/: api.ts
infrastructure/: README.md
